# RoboTaskRuntime

./: .gitignore  CMakeLists.txt  README.md
configs/: minimal_task.yaml  spr_vision_26_fake_test.yaml  spr_vision_26_standard4.yaml
include/rtr/core/: data.hpp  debug.hpp  log.hpp  param.hpp  runtime.hpp  task.hpp  webui_server.hpp
include/rtr/io/: data_source.hpp  dummy_sink.hpp  sim_camera_source.hpp  sink.hpp
include/rtr/toolkit/: ekf_core.hpp  pid.hpp
include/tasks/spr_vision_26/: spr_vision_fake_test_task.hpp  spr_vision_task.hpp
src/: main.cpp
src/core/: runtime.cpp  webui_server.cpp
src/io/: sim_io.cpp
src/task/spr_vision_26/: README.md  spr_vision_fake_test_task.cpp  spr_vision_image_bridge.cpp  spr_vision_image_bridge.hpp  spr_vision_task.cpp
src/tasks/minimal_task/: minimal_task.cpp  minimal_task.hpp
src/tasks/spr_vision_26/: README.md  spr_vision_fake_test_task.cpp  spr_vision_task.cpp
src/webui/: app.js  index.html  style.css
